--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "didi-ssi-docs",
   "version": "0.0.0",
-  "private": true,
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
