--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cz-jira-smart-commit": "^3.0.0"
   }
 }
